feat: audit module
